<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.orcs.udacitystudy.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/MyNanoDegreeApps"
            android:textColor="@color/backTxt"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/main_activity_popular_movies_btn"
            style="@style/CustomerButtonStyle"
            android:text="@string/PopularMovies"/>

        <Button
            android:id="@+id/main_activity_stock_hawk_btn"
            style="@style/CustomerButtonStyle"
            android:text="@string/StockHawk"/>

        <Button
            android:id="@+id/main_activity_build_it_bigger_btn"
            style="@style/CustomerButtonStyle"
            android:text="@string/BuildBigger"/>

        <Button
            android:id="@+id/main_activity_make_your_app_material"
            style="@style/CustomerButtonStyle"
            android:text="@string/MakeYourAPPMaterial"/>

        <Button
            android:id="@+id/main_activity_go_ubiquitous_btn"
            style="@style/CustomerButtonStyle"
            android:text="@string/GoQbiquitous"/>

        <Button
            android:id="@+id/main_activity_capstone_btn"
            style="@style/CustomerButtonStyle"
            android:text="@string/Capstone"/>
    </LinearLayout>
</ScrollView>